backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 038462771803.dkr.ecr.us-east-1.amazonaws.com/noteapp:16
          ports:
            - containerPort: 5000
