worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-worker
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: llm-worker
  template:
    metadata:
      labels:
        app: llm-worker
    spec:
      containers:
        - name: llm-worker
          image: 038462771803.dkr.ecr.us-east-1.amazonaws.com/noteapp-worker:27
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
